terraform/10-private_route_table.tf
resource "aws_route_table" "private_route_table" {
  vpc_id = aws_vpc.main.id

  tags = merge(local.common_tags,
    tomap({ "Name" = "${local.prefix}-private-RT" })
  )
}


resource "aws_route" "private_nat_gw_route" {
  route_table_id         = aws_route_table.private_route_table.id
  destination_cidr_block = var.global_destination_cidr_block
  nat_gateway_id         = aws_nat_gateway.nat_gateway.id
}


resource "aws_route_table_association" "private_subnet_1_association" {
  subnet_id      = aws_subnet.private_subnet_a.id
  route_table_id = aws_route_table.private_route_table.id
}


resource "aws_route_table_association" "private_subnet_2_association" {
  subnet_id      = aws_subnet.private_subnet_b.id
  route_table_id = aws_route_table.private_route_table.id
}
